--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br><br><br><br><br><br>
  
         <img src="images/raspilogo.jpg" class="uno"  >
-        <h1 class="title">Raspberry Pi</h1>
+        <h1 class="title">chris</h1>
        
 
         <div class="btn-home">
